<resources>
    <string name="app_name">MediTrackPrincipal</string>
    <string name="ErrorMsgAdd">Error al registrar el dato.</string>
    <string name="ErrorMsgUpdate">Error al modificar el dato.</string>
    <string name="ErrorMsgRemove">Error al eliminar el dato.</string>
    <string name="ErrorMsgGetAll">Error al obtener los datos.</string>
    <string name="ErrorMsgGetEspecificData">Error al obtener el dato especifico.</string>
    <string name="username_ly">Nombre de usuario</string>
    <string name="password_ly">Contraseña</string>
    <string name="login_ly">Iniciar Sesión</string>
    <string name="create_acc_ly">Crear Cuenta</string>
    <string name="name_ly">Nombre</string>
    <string name="lastName1_ly">Primer Apellido</string>
    <string name="lastName2_ly">Segundo Apellido</string>
    <string name="phone_ly">Teléfono</string>
    <string name="email_ly">Correo Electrónico</string>
    <string name="birthday_ly">Fecha de nacimiento</string>
    <string name="state_ly">Cantón</string>
    <string name="distric_ly">Distrito</string>
    <string name="address_ly">Dirección exacta</string>
    <string-array name="province_ly">
        <item>San José</item>
        <item>Alajuela</item>
        <item>Cartago</item>
        <item>Heredia</item>
        <item>Guanacaste</item>
        <item>Puntarenas</item>
        <item>Limón</item>
    </string-array>
    <string name="MsgDataNotFound">El dato no fue encontrado.</string>
    <string name="MsgIsNorRegister">No estas registrado debes de create una cuenta.</string>
    <string name="MsgIncorrectPassword">Contraseña Incorrecta.</string>
    <string name="MsgLoginSuccess">Inición de sesión exitoso.</string>
    <string name="id_ly">Identificación</string>
    <string name="province_ly">Provincia</string>
    <string name="TextYes">Si</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Pregunta...</string>
    <string name="MsgCreateAccSuccess">Creación de cuenta exitosamente.</string>
    <string name="MsgDuplicated">Error: Identificación Duplicada</string>
    <string name="MsgDuplicated2">Error: Nombre de Usuario ya existe</string>
    <string name="medication_ly">Medicamentos</string>
    <string name="save_content_ly">Guardar</string>
    <string name="modify_content_ly">Modificar</string>
    <string name="delete_content_ly">Eliminar</string>
    <string name="cancel_content_ly">Cancelar</string>
    <string name="back_content_ly">Volver</string>
    <string name="home_content_ly">Inicio</string>
    <string name="person_content_ly">Perfil</string>
    <string name="calendar_content_ly">Calendario</string>
    <string name="camara">Cámara</string>
    <string name="gallery">Galería</string>
    <string name="txtViewImg_medication">Imagen(Opcional)</string>
    <string name="txtViewName_medication">Nombre</string>
    <string name="exampleNameMedication_medication">Ej: Paracetamol</string>
    <string name="txtViewId_medication">Identificaación del Medicamento</string>
    <string name="exampleDescription_medication">Ej: Para el dolor de cabeza.</string>
    <string name="txtViewDescription_medication">Descripción (Opcional)</string>
    <string name="txtViewFrequency_medication">Frecuencia</string>
    <string name="selctTime_ly">Seleccionar hora</string>
    <string name="start_date_ly">Fecha Inicio</string>
    <string name="select_ly">Selecionar</string>
    <string name="end_date_ly">Fecha Fin (Opcional)</string>
    <string name="txtViewDose_medication">Dosis</string>
    <string name="exampleDose_medication">Ej: 500mg</string>
    <string name="MsgCreateMedicationSuccess">Medicamento agregado exitosamente.</string>
    <string name="MsgNotIsInt">El identificador del medicamento debe de ser un número entero.</string>
    <string name="MsgNotIsEditMode">No se puede modificar tienes que buscar un medicamento.</string>
    <string name="MsgNotIsEditMode2">No se puede eliminar tienes que buscar un medicamento.</string>
    <string name="MsgDeleteSuccess">Dato eliminado exitosamente.</string>
    <string name="medication_content_ly">Medicamentos</string>
    <string name="logout_content_ly">Cerrar Sesión</string>
    <string name="MsgDeleteMedication">Deseas eliminar este medicamento.</string>
    <string name="MsgSaveMedication">Deseas crear este medicamento.</string>
    <string name="MsgUpdateMedication">Deseas modificar este medicamento.</string>
    <string name="imgView_ly">Imagen del medicamento</string>
    <string name="MsgUpdateProfileSuccess">Perfil actualizado correctamente</string>
    <string name="MsgUpdateProfile">Deseas actualizar tu perfil?</string>
    <string name="empty_list">No hay medicamentos registrados.</string>
    <string name="MsgUpdateMedicationSuccess">Medicamento modificado exitosamente.</string>
    <string-array name="frequency_options">
        <item>Diaria</item>
        <item>Cada 8 horas</item>
        <item>Cada 12 horas</item>
        <item>Semanal</item>
    </string-array>
</resources>