<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HomeActivity">

    <!-- Encabezado -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="#4180ab"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medication_ly"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="start" />
    </LinearLayout>

    <!-- LISTA DE MEDICAMENTOS (RecyclerView) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMedications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerLayout"
        android:layout_above="@id/footerLayout"
        android:padding="8dp"/>

    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="#4180ab"
        android:gravity="center"
        android:weightSum="3"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/home"
                app:tint="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_content_ly"
                android:textColor="#ffffff"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/medication_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/add_circle"
                app:tint="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medication_content_ly"
                android:textColor="#ffffff"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/person_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/person"
                app:tint="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_content_ly"
                android:textColor="#ffffff"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
