<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <!-- Contenedor desplazable -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">

        <!-- Contenido principal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/card_background"
            android:padding="16dp"
            android:layout_margin="16dp">

            <!-- Imagen de encabezado -->
            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/circle_account" />

            <!-- Título -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_acc_ly"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp" />

            <!-- ===== Campos de entrada ===== -->
            <EditText
                android:id="@+id/txtUsername_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtEmail_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtPassword_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/txtId_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtName_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtFirstLastName_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName1_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtSecondLastName_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName2_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <!--<EditText
                android:id="@+id/txtPhone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="phone"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <LinearLayout
                android:id="@+id/layoutBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corner"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/tvBirthdayLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_ly"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvBirthdayValue_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/selectDate_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:padding="4dp"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar"/>
            </LinearLayout>

            <EditText
                android:id="@+id/txtProvince_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/province_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textCapWords"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtState_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textCapWords"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtDistrict_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distric_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textCapWords"
                android:textSize="20sp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/txtAddress_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_ly"
                android:background="@drawable/rounded_corner"
                android:padding="18dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textSize="20sp"
                android:layout_marginBottom="20dp" />-->

            <!-- Botón de registrar -->
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#4180ab"
                android:text="@string/create_acc_ly"
                android:textColor="#000000"
                android:textSize="20sp"
                android:padding="14dp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
